# models/filter.ts
@@ -8,17 +8,17 @@ interface Filter {
 interface FilterField {
     field: string;
     operator: 'equals' | 'not' | 'contains' | 'null';
-    value: string | number | boolean;
+    value: string | number | boolean | null;
 }
 
 interface Pagination {
     page: number;
-    pageSize: number;
+    pageSize?: number;
 }
 
 interface Sort {
     field: string;
-    order: string;
+    order: 'asc' | 'desc';
 }
 
 export { Filter };
