# routes/v1/transaction-route.ts
@@ -6,6 +6,8 @@ import { TransactionController } from '../../controllers/transaction-controller'
 const transactionRouterV1 = Router();
 
 transactionRouterV1.get('/balance', authenticateToken, TransactionController.getBalanceForCurrentUser);
+transactionRouterV1.get('/transaction/history', authenticateToken, TransactionController.getListForCurrentUser);
 transactionRouterV1.post('/topup', authenticateToken, TransactionController.topUpBalanceForCurrentUser);
+transactionRouterV1.post('/transaction', authenticateToken, TransactionController.paymentForCurrentUser);
 
 export { transactionRouterV1 };
